--- a/style.css
+++ b/style.css
@@ -1,35 +1,49 @@
 body {
-    background-color: rgb(199,1,26);
+    background-color: rgb(243, 173, 93);
     color: #F1F1F1;
+    text-align: center;
 }
 
 h1 {
     text-align: center;
+    font-size: 50px;
 }
 
 #display {
     width: 200px;
     margin: 0px auto;
-    border: 3px black solid;
+    border: 5px black solid;
     border-radius: 5px;
     text-align: center;
     padding: 5px;
 }
 
 #display > p{
+    font-size: 30px;
     display: inline;
     padding: 10px;
 }
 
 #contener_timer {
+    font-size: 30px;
+    font-weight: bold;
+    margin: 20px;
+    display: none;
+    border: 5px solid black;
+    border-radius: 50%;
+    padding: 170px;
     text-align: center;
 }
 
 #contener_button {
     text-align: center;
+    margin-top: 40px;
 }
 
 #reset, #start {
+    font-size: 50px;
+    background: none;
+    border: none;
     text-decoration: none;
     margin: 0px auto;
 }
