--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
 body {
     background-color: rgb(243, 173, 93);
     color: #F1F1F1;
     text-align: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 h1 {
@@ -12,8 +15,7 @@ h1 {
 #display {
     width: 200px;
     margin: 0px auto;
-    border: 5px black solid;
-    border-radius: 5px;
+    border-bottom: 5px #F1F1F1 solid;
     text-align: center;
     padding: 5px;
 }
@@ -25,14 +27,22 @@ h1 {
 }
 
 #contener_timer {
+    background-color: rgb(243, 173, 93);
     font-size: 30px;
     font-weight: bold;
     margin: 20px;
     display: none;
-    border: 5px solid black;
+    border: 5px solid #F1F1F1;
     border-radius: 50%;
-    padding: 170px;
+    min-width: 160px;
+    min-height: 160px;
+    padding: 40px;
     text-align: center;
+}
+
+#timer {
+    color: #FFFFFF;
+    font-size: 50px;
 }
 
 #contener_button {
@@ -46,6 +56,7 @@ h1 {
     border: none;
     text-decoration: none;
     margin: 0px auto;
+    color: #F1F1F1;
 }
 
 #reset {
