--- a/style.css
+++ b/style.css
@@ -79,3 +79,11 @@ h1 {
     color: #FFFFFF;
     font-weight: bold;
 }
+
+@media screen and (max-width: 767px) {
+
+}
+
+@media screen and (max-width: 768px) and (max-width: 1023px) {
+
+}
