--- a/style.css
+++ b/style.css
@@ -88,15 +88,19 @@ footer {
     background-color: #222222;
 }
 
+footer p {
+    margin: 5px;
+}
+
 @media only screen and (min-width: 768px) {
     body {
-        height: 860px;
+        height: 830px;
     }
 }
 
 @media only screen and (max-width: 767px) {
     body {
-        height: 720px;
+        height: 690px;
     }
     h1 {
         font-size: 30px;
